# localpdfragapplication

./: .env.sample  .gitignore  README.md  db.sh  default.nix  pdf_assistant.py  pyproject.toml
